--- a/package.json
+++ b/package.json
@@ -98,6 +98,6 @@
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
     "react-refresh": "^0.17.0",
-    "webpack-dev-server": "5.2.1"
+    "webpack-dev-server": "^5.2.2"
   }
 }
