Updated anonymized dev db

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,9 @@
 	"service": "app",
     "runServices": [
         "db",
-        "redis",
-		"browser",
+        //"redis",
+		//"browser",
+		//"moodle",
 		"selenium"
 	],
 	"workspaceFolder": "/home/colab/src/app",
