--- a/containers/agnostic/dev_server/Dockerfile
+++ b/containers/agnostic/dev_server/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu
 
-RUN apt update && apt upgrade -y && \
-  apt -y install --fix-missing \
+RUN apt-get update && apt-get upgrade -y && \
+  apt-get -y install --fix-missing \
   curl \
   imagemagick \
   libvips \
@@ -17,8 +17,8 @@ RUN apt update && apt upgrade -y && \
   libsecret-1-dev \
   zsh
 
-RUN apt autoremove && \
-    apt clean
+RUN apt-get autoremove && \
+    apt-get clean
 
 RUN groupadd -r colab && \
   useradd --no-log-init -rm -d /home/colab -s /bin/zsh -g colab colab
@@ -39,14 +39,14 @@ RUN mkdir -p /home/colab/.local/share/mise && \
 
 SHELL ["/bin/bash", "-l", "-c"]
 
-RUN echo -e "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
-  echo -e "export AWS_ACCESS_KEY_ID=XXXXXXX" >> ~/.bashrc &&\
-  echo -e "export AWS_SECRET_ACCESS_KEY=XXXXXXX" >> ~/.bashrc &&\
-  echo -e "export AWS_REGION=ap-northeast-2" >> ~/.bashrc &&\
-  echo -e "export DISPLAY=:0" >> ~/.bashrc &&\
-  echo -e "export LIBGL_ALWAYS_INDIRECT=1" >> ~/.bashrc && \
-  echo -e "export DRIVER=docker" >> ~/.bashrc && \
-  echo -e "export CUCUMBER_PUBLISH_TOKEN=b7e96979-5fe5-43a0-9eae-42cffb5e8c13"
+RUN echo "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
+  echo "export AWS_ACCESS_KEY_ID=XXXXXXX" >> ~/.bashrc &&\
+  echo "export AWS_SECRET_ACCESS_KEY=XXXXXXX" >> ~/.bashrc &&\
+  echo "export AWS_REGION=ap-northeast-2" >> ~/.bashrc &&\
+  echo "export DISPLAY=:0" >> ~/.bashrc &&\
+  echo "export LIBGL_ALWAYS_INDIRECT=1" >> ~/.bashrc && \
+  echo "export DRIVER=docker" >> ~/.bashrc && \
+  echo "export CUCUMBER_PUBLISH_TOKEN=b7e96979-5fe5-43a0-9eae-42cffb5e8c13"
 
 
 USER colab
