More podman-conversion fixes

--- a/containers/agnostic/dev_server/Dockerfile
+++ b/containers/agnostic/dev_server/Dockerfile
@@ -30,9 +30,8 @@ RUN curl -fsSL https://mise.jdx.dev/install.sh | sh
 ENV PATH="/home/colab/.local/bin:$PATH"
 RUN mkdir -p /home/colab/.local/share/mise && \
   echo 'eval "$(~/.local/bin/mise activate zsh)"' >> /home/colab/.zshrc && \
-  echo "export PATH=/home/colab/.local/bin:$PATH" >> ~/.zshrc && \
-  echo "bundler \n foreman \n rubocop" >> ~/.default-gems && \
-  mise install ruby yarn nodejs
+  # echo "export PATH=/home/colab/.local/bin:$PATH" >> ~/.zshrc && \
+  echo "bundler \n foreman \n rubocop" >> ~/.default-gems
 
 RUN echo "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
   echo "export AWS_ACCESS_KEY_ID=XXXXXXX" >> ~/.bashrc &&\
