added in redis and a chrome browser

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,8 @@
 	"service": "app",
     "runServices": [
         "db",
-        //"redis",
-		//"browser",
+        "redis",
+		"browser",
 		//"moodle",
 		"selenium"
 	],
