moodle and redis and all boot and run - if not properly

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
         "db",
         "redis",
 		"browser",
-		//"moodle",
+		"moodle",
 		"selenium"
 	],
 	"workspaceFolder": "/home/colab/src/app",
