--- a/containers/dev_env/docker-compose.yml
+++ b/containers/dev_env/docker-compose.yml
@@ -51,14 +51,16 @@ services:
     depends_on:
       - db
     environment:
-      - MOODLE_LANG=en
-      - LANGUAGE=en_US:en
-      - MOODLE_DATABASE_TYPE=mariadb
-      - MOODLE_DATABASE_HOST=db
-      - MOODLE_DATABASE_PORT_NUMBER=3306
-      - MOODLE_DATABASE_NAME=moodle
-      - MOODLE_DATABASE_USER=moodle
-      - MOODLE_DATABASE_PASSWORD=moodle
+      - MOODLE_LANGUAGE=en
+      - LANG=en_US:en
+      - SITE_URL=http://moodle:8080
+      - MOODLE_URL=http://moodle:8080
+      - DB_TYPE=mariadb
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_NAME=moodle
+      - DB_USER=moodle
+      - DB_PASSWORD=moodle
 
       - MOODLE_REVERSEPROXY=false
       - MOODLE_SSLPROXY=false
@@ -73,6 +75,8 @@ services:
       - MOODLE_SMTP_PASSWORD=CHANGEME
       - MOODLE_MAIL_NOREPLY_ADDRESS=noreply@localhost
       - MOODLE_MAIL_PREFIX=[colab-moodle]
+
+      - REDIS_HOST=redis
     ports:
       - 8080:8080
     volumes:
