--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "mini-css-extract-plugin": "^2.9.2",
     "mockdate": "^3.0.5",
     "primeicons": "^7.0.0",
-    "primereact": "^10.0.2",
+    "primereact": "10.9.1",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
     "quill": "^2.0.2",
