--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
     "react-joyride": "^2.9.3",
-    "react-on-rails": "^14.2.1",
+    "react-on-rails": "14.2.1",
     "react-redux": "^9.0.1",
     "react-router": "^7.6.0",
     "react-spring": "9.7.5",
@@ -80,7 +80,7 @@
     "typescript": "^5.0.2",
     "url": "^0.11.0",
     "webpack": "5",
-    "webpack-assets-manifest": "5",
+    "webpack-assets-manifest": "^6.2.2",
     "webpack-cli": "6.0.1",
     "webpack-merge": "6.0.1",
     "webpack-sources": "^3.2.3",
