--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-grid-system": "^8.1.9",
     "react-i18next": "^15.0.1",
     "react-joyride": "^2.9.3",
-    "react-on-rails": "14.2.1",
+    "react-on-rails": "^15.0.0",
     "react-redux": "^9.0.1",
     "react-router": "^7.6.0",
     "react-spring": "9.7.5",
